<resources>
    <string name="app_name">HelpMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">User guide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="institutions_fragment">INSTITUTIONS FRAGMENT</string>
    <string name="nombre_de_contacto" />
    <string name="name" />
    <string name="tel_fono_de_contacto" />
    <string name="cancelar" />
    <string name="guardar" />
    <string name="datos_de_contacto" />
    <string name="add_contact" />
    <string name="white_list_fragment">WHITE LIST FRAGMENT</string>
    <string name="add_contact2">Add contact</string>
    <string name="Guardar">Save</string>
    <string name="Cancelar">Cancel</string>
    <string name="Telefono">Phone</string>
    <string name="Nombre">Name</string>
    <string name="DatosContacto">Contact information</string>
    <string name="NombreContactoEliminar">NameContactToDelete</string>
    <string name="eliminar">Delete</string>
    <string name="telefonoeliminar">PhoneToDelete</string>
    <string name="myName">Name</string>
    <string name="myLastName">Last Name</string>
    <string name="myID">ID</string>
    <string name="myBirthdate">Birth date</string>
    <string name="myBloodType">Blood Type</string>
    <string name="mySufferings">Sufferings</string>
    <string name="editButton">Update Information</string>
    <string name="this_is_the_emergency_list">This is the emergency list</string>
    <string name="next"> Start now!</string>
</resources>
