<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DatosContacto"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:text="@string/DatosContacto"
                tools:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/NombreContactoEliminar"
                tools:text="@string/Nombre" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textViewTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/telefonoeliminar"
                tools:text="@string/telefonoeliminar" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonCancel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancelar"
                tools:text="@string/Cancelar" />

            <Button
                android:id="@+id/buttonOk"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>